add geolocation button to the chat

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			<form class="input-form">
 				<input type="text" class="input" placeholder="Здесь вводится текст сообщения">
 				<button type="submit" class="submit">Отправить</button>
+				<button class="geolocation">Гео-локация</button>
 			</form>
 		</div>
 
